--- a/package.json
+++ b/package.json
@@ -32,13 +32,10 @@
     }
   },
   "homepage": "https://html5boilerplate.com/",
-  "license": {
-    "type": "MIT",
-    "url": "https://github.com/h5bp/html5-boilerplate/blob/master/LICENSE.txt"
-  },
   "name": "html5-boilerplate",
   "private": true,
   "scripts": {
+    "start": "node index.js",
     "build": "gulp build",
     "test": "gulp archive && mocha --reporter spec --timeout 5000"
   },
